feat: configurando pre authorize na busca do candidato